--- a/DOCS/_sass/_variables.scss
+++ b/DOCS/_sass/_variables.scss
@@ -94,7 +94,7 @@
   // Font System
   --font-size-xs: 0.75rem;
   --font-size-sm: 0.875rem;
-  --font-size-base: 1rem;
+  --font-size-base: 1.2rem;
   --font-size-lg: 1.125rem;
   --font-size-xl: 1.25rem;
   --font-size-2xl: 1.5rem;
